# fountain_raptor_10

./: CHANGELOG.md  Cargo.toml
examples/: raptor_10_performance.rs  test_raptor_10.rs  test_raptor_10_multi_threads.rs
src/: raptor_10.rs
src/generator/: math_util.rs  mod.rs  rfc5053_degree_set.rs  triple_generator.rs
