[package]
name = "fountain_raptor_10"
version = "1.2.1"
edition = "2024"
authors = ["Zigeng Xu", "Shenghao Yang"]
license = "MIT"
description = "Raptor-10 fountain code scheme built on fountain_engine"
repository = "https://github.com/wutongabc/fountain_raptor_10"
documentation = "https://docs.rs/fountain_raptor_10"
keywords = ["fountain-code", "erasure-coding", "raptor-code", "fec", "rfc5053"]
categories = ["algorithms", "encoding", "network-programming"]
readme = "README.md"
include = [
    "src/**",
    "examples/test_raptor_10.rs",
    "examples/test_raptor_10_multi_threads.rs",
    "examples/raptor_10_performance.rs",
    "examples/degree_gen_example.rs",
    "examples/random_gen_example.rs",
    "examples/k4_message_degree_sets.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[dependencies]
fountain_engine = "1.3.1"
fountain_scheme = "1.3.0"
fountain_utility = "1.3.0"
rand = "0.8.5"

[[example]]
name = "test_raptor_10"
path = "examples/test_raptor_10.rs"

[[example]]
name = "test_raptor_10_multi_threads"
path = "examples/test_raptor_10_multi_threads.rs"

[[example]]
name = "degree_gen_example"
path = "examples/degree_gen_example.rs"

[[example]]
name = "random_gen_example"
path = "examples/random_gen_example.rs"

[[example]]
name = "k4_message_degree_sets"
path = "examples/k4_message_degree_sets.rs"

[[example]]
name = "raptor_10_performance"
path = "examples/raptor_10_performance.rs"
